# langtool

./: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  langtool_config.h.cmake
layout/: lenmus-cover.htm  lenmus-lesson.htm  mmt-cover.htm  mmt-cover2.htm  mmt-lesson.htm
locale/de/: GeneralExercises_de.mo  GeneralExercises_de.po  L1_MusicReading_de.mo  L1_MusicReading_de.po  L2_MusicReading_de.mo  TheoryHarmony_de.mo  TheoryHarmony_de.po
locale/el/: GeneralExercises_el.mo  GeneralExercises_el.po  L1_MusicReading_el.mo  L1_MusicReading_el.po  L2_MusicReading_el.mo  L2_MusicReading_el.po  TheoryHarmony_el.mo  TheoryHarmony_el.po
locale/es/: GeneralExercises_es.mo  GeneralExercises_es.po  L1_MusicReading_es.mo  L1_MusicReading_es.po  L2_MusicReading_es.mo  L2_MusicReading_es.po  TheoryHarmony_es.mo  TheoryHarmony_es.po
locale/eu/: GeneralExercises_eu.mo  GeneralExercises_eu.po  L1_MusicReading_eu.mo  L1_MusicReading_eu.po  L2_MusicReading_eu.mo  L2_MusicReading_eu.po  TheoryHarmony_eu.mo  TheoryHarmony_eu.po  allbooks_eu.po
locale/fr/: GeneralExercises_fr.mo  GeneralExercises_fr.po  L1_MusicReading_fr.mo  L1_MusicReading_fr.po  L2_MusicReading_fr.mo  L2_MusicReading_fr.po  TheoryHarmony_fr.mo  TheoryHarmony_fr.po
locale/gl_ES/: GeneralExercises_gl_ES.mo  GeneralExercises_gl_ES.po  L1_MusicReading_gl_ES.mo  L1_MusicReading_gl_ES.po  L2_MusicReading_gl_ES.mo  L2_MusicReading_gl_ES.po  TheoryHarmony_gl_ES.mo  TheoryHarmony_gl_ES.po
locale/it/: GeneralExercises_it.mo  GeneralExercises_it.po  L1_MusicReading_it.mo  L1_MusicReading_it.po  L2_MusicReading_it.mo  TheoryHarmony_it.mo  TheoryHarmony_it.po
locale/nl/: GeneralExercises_nl.mo  GeneralExercises_nl.po  L1_MusicReading_nl.mo  L1_MusicReading_nl.po  L2_MusicReading_nl.mo  L2_MusicReading_nl.po  TheoryHarmony_nl.mo  TheoryHarmony_nl.po
locale/pot-files/: GeneralExercises.pot  L1_MusicReading.pot  L2_MusicReading.pot  TheoryHarmony.pot
locale/tr/: GeneralExercises_tr.mo  GeneralExercises_tr.po  L1_MusicReading_tr.mo  L1_MusicReading_tr.po  L2_MusicReading_tr.mo  L2_MusicReading_tr.po  TheoryHarmony_tr.mo  TheoryHarmony_tr.po
locale/zh_CN/: GeneralExercises_zh_CN.mo  GeneralExercises_zh_CN.po  L1_MusicReading_zh_CN.mo  L1_MusicReading_zh_CN.po  L2_MusicReading_zh_CN.mo  L2_MusicReading_zh_CN.po  TheoryHarmony_zh_CN.mo  TheoryHarmony_zh_CN.po
scripts/: README.md  build-langtool.sh
src/: command.cpp  command.h  dlg_compile_book.cpp  dlg_compile_book.h  ebook_processor.cpp  ebook_processor.h  help_processor.cpp  help_processor.h  installer.cpp  installer.h  langtool.cpp  main_frame.cpp  main_frame.h  paths.cpp  paths.h
